--- a/PHP-CRUD/Styles/navbar.css
+++ b/PHP-CRUD/Styles/navbar.css
@@ -19,7 +19,7 @@
 
 .navbar-wrapper {
   width: 100%;
-  height: 70px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -67,7 +67,7 @@
 }
 
 .logout-btn {
-  background-color: #ff4c4c;
+  background-color: #00bcd4;
   color: white;
   padding: 10px 20px;
   border-radius: 4px;
@@ -76,5 +76,5 @@
 }
 
 .logout-btn:hover {
-  background-color: #e53935;
+  background-color: #00bcd4;
 }
